# memory-bank

./: .env.example  .gitignore  Dockerfile.rpi  README.md  dune-project  memory-bank.opam  test_api.sh  test_delete_api.sh  test_list_api.sh
lib/: config.ml  database.ml  dune  logging.ml  metadata.ml  migrations.ml  models.ml  playlist.ml  storage.ml
migrations/: 001_initial_schema.sql  002_add_deleted_at.sql
test/: dune  test_migrations.ml
